Code review improvements, generics updates